--- a/style.css
+++ b/style.css
@@ -1,55 +1,18 @@
 .nav-link{
-    margin-left: 70px;
+    margin-left: 0px;
     color: lightsalmon;
 }
 .form-inline{
-    margin-left: 90px;
-    margin-right: 40px;
-}
-.glyphicon-user{
-    margin-right: 20px;
+    margin-left: 20px;
+    margin-right: 2px;
 }
 .glyphicon-log-in{
-    margin-right: 20px;
-}
-.conteneur{
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    height: 100px;
-}
-.atlanta{
-    width: 100px;
-    height: 100px;
-}
-.boite{
-    width: 500px;
-    height: 550px;
-    /* background-image: url('publics/photos/atlantica.jpg');
-    background-size: contain; */
-}
-.boite img{
-    object-fit: contain;
-    width: 100%;
-    height: 100%;
+    margin-right: 10px;
 }
 .nav-link:hover{
     background-color: #555;
     border-radius: 20px;
     color: coral;
-}
-.brique{
-    width: 200px;
-    height: 1000px;
-    padding-left: 50px;
-    margin-left: 20px;
-    text-align: justify;
-}
-.brique h1{
-    font-size: 20px;
-    color: blue;
-    text-transform: uppercase;
-    text-decoration: underline;
 }
 /* section contact */
 .contact{
@@ -144,6 +107,11 @@ form textarea{
     form input[type="submit"]{
         width: 40%;
     }
+}
+.navhome{
+    display: flex;
+    justify-content: space-around;
+    width: 1000px;
 }
 
 
