--- a/destination.css
+++ b/destination.css
@@ -1,6 +1,14 @@
+@font-face {
+    font-family: oswald;
+    src: url('../fonts/Oswald-Regular.ttf');
+}
+@font-face {
+    font-family: Montserrat;
+    src: url('../fonts/Montserrat-Regular.ttf');
+}
 #moi{
-    margin: auto;
-    margin-top: 20px;
+    background-image:  linear-gradient(to top left,rgba(10, 85, 245, 0.952), rgba(230, 134, 9, 0.952) ),url('');
+    border: none;
 }
 .body{
     background-image:  linear-gradient(to top left,rgba(9, 209, 216, 0.788), rgba(232, 233, 225, 0) ),url('fond22.jpg');
@@ -10,4 +18,52 @@
     width: 100%;
     height: auto;
     margin-top: -20px;
+}
+.heberge1{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    /* transform: translate(0%, 6%); */
+    margin-bottom: 15px;
+}
+.heberge2{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    /* transform: translate(0%, 6%); */
+    margin-bottom: 15px;
+}
+.heberge3{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    /* transform: translate(0%, 6%); */
+    margin-bottom: 15px;
+}
+.heberge4{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    /* transform: translate(0%, 6%); */
+    margin-bottom: 15px;
+}
+.heberge5{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    /* transform: translate(0%, 6%); */
+    margin-bottom: 5px;
+}
+.heberge6{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    /* transform: translate(0%, 20%); */
+    margin-top: 15px;
+}
+h4{
+    font-family: montserrat;
+}
+p{
+    font-family: oswald;
 }
