--- a/css/destination.css
+++ b/css/destination.css
@@ -14,10 +14,10 @@
     background-image:  linear-gradient(to top left,rgba(9, 209, 216, 0.788), rgba(232, 233, 225, 0) ),url('fond22.jpg');
 }
 .destination{
-    background-image:  linear-gradient(to top left,rgba(10, 85, 245, 0.952), rgba(230, 134, 9, 0.952) ),url('');
+    
     width: 100%;
-    height: auto;
-    margin-top: -20px;
+    margin-top: 0px;
+    /* height: auto; */
 }
 .heberge1{
     width: 100%;
@@ -66,4 +66,18 @@ h4{
 }
 p{
     font-family: oswald;
+}
+.navBar{
+    z-index: 999;
+    position: sticky;
+}
+section{
+    width: 100%;
+    height: 100%;
+    margin-top: 0;
+    padding-top: 50px;
+    background-image:  linear-gradient(to top left,rgba(243, 245, 245, 0.952), rgba(27, 201, 245, 0.952) ),url('');
+}
+.dest{
+    width: 250px;
 }
