--- a/css/nav.css
+++ b/css/nav.css
@@ -1,54 +1,73 @@
-*{
-    padding: 0;
-    margin: 0;
-    text-decoration: none;
-    list-style: none;
-}
 .navBar{
-    position: fixed;
     display: flex;
+    align-items: center;
     justify-content: space-around;
     width: 100%;
-    padding: 1px;
-    box-sizing: border-box;
-    align-items: center;
+    max-height: 100px;
+    /* background-image: url("vuePlage.jpg"); */
+    /* background-size: cover; */
     background-color: blue;
-    max-height: 70px;
-    border-bottom-right-radius: 10px;
-    border-bottom-left-radius: 10px;
 }
-.logo {
-    padding: 2px;
-    max-width: 20%;
-    max-height: 70px;
+.logo{
+    max-height: 60px;
 }
-.logo img {
-    object-fit: cover;
-    max-width: 100%;
-    max-height: 70px;
-    border-radius: 120px;
+.logo img{
+    object-fit: contain;
+    width: 100%;
+    max-height: 60px;
+    border-radius: 50px;
+}
+.navLinks{
+    width: 50%;
 }
 .navLinks ul{
+    flex-wrap: wrap;
     display: flex;
+    max-width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+    list-style: none;
 }
+/* .navLinks ul li{
+    list-style-type: none;
+} */
 .navLinks ul li a{
-    color: white;
+    font-size: 1.5rem;
     padding: 10px;
-    font-size: 120%;
 }
 .navLinks ul li a:hover{
-    background-color: rgba(56, 17, 230, 0.603);
+    text-decoration: none;
+    padding: 15px;
+    background-color: rgb(233, 223, 223);
+    border-radius: 30px;
 }
-.menuHumberger{
-    font-size: 200%;
-    display: none;
+.searchBar{
+    border: none;
+    background-color: rgb(236, 222, 222);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    border-radius: 20px;
 }
+.searchBar input{
+    border: none;
+    background-color: rgb(236, 222, 222);
+}
+.searchBar label{
+    margin: 0;
+}
+.fa-user{
+    font-size: 35px;
+}
+
 .menuHumberger{
-    font-size: 200%;
     display: none;
 }
 .fa-user{
-    font-size: 120%;
+    font-size: 35px;
 }
 .desconnectButton{
     padding: 20px;
@@ -66,6 +85,11 @@
     background-color: rgba(3, 3, 68, 0.945);
     padding: 10%;
 }
+.desconnectList ul{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
 .desconnectList ul li a{
     display: block;
     color: white;
@@ -80,22 +104,18 @@
     top: 100%;
     box-sizing: border-box;
     text-align: center;
+    width: 200%;
 }
-.searchBar{
-    display: flex;
-    align-items: center;
-    border: 1px solid black;
-    border-radius: 20px;
-    padding: 1%;
-    background-color: white;
-}
-.searchBar input{
-    border: none;
-    padding: 0.5%;
-    border-radius: 20px;
-    outline: none;
-}
-@media (max-width: 900px) {
+/* configuration responsive */
+@media (max-width: 900px){
+    .menuHumberger{
+        display: block;
+        cursor: pointer;
+        font-size: 30px;
+    }
+    .menuHumberger .fa:hover{
+        color: white;
+    }
     .menuHumberger{
         display: block;
         z-index: 999;
@@ -142,19 +162,5 @@
     }
     .navLinks ul li a:hover{
         background-color: rgba(56, 17, 230, 0.603);
-    }
-    .searchBar{
-        width: 40%;
-        display: flex;
-        border: 1px solid black;
-        border-radius: 20px;
-        padding: 2%;
-    }
-    .searchBar input{
-        width: 90%;
-        border: none;
-        padding: 1%;
-        border-radius: 20px;
-        outline: none;
     }
 }
