--- a/css/nav.css
+++ b/css/nav.css
@@ -1,158 +1,139 @@
-.navBar{
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    width: 100%;
-    max-height: 100px;
-    /* background-image: url("vuePlage.jpg"); */
-    /* background-size: cover; */
-    background-color: blue;
-}
-.logo{
-    max-height: 60px;
-}
-.logo img{
-    object-fit: contain;
-    width: 100%;
-    max-height: 60px;
-    border-radius: 50px;
-}
-.navLinks{
-    width: 50%;
-}
-.navLinks ul{
-    flex-wrap: wrap;
-    display: flex;
-    max-width: 100%;
-    justify-content: space-between;
-    align-items: center;
+*{
     margin: 0;
     padding: 0;
-    list-style: none;
-}
-/* .navLinks ul li{
-    list-style-type: none;
-} */
-.navLinks ul li a{
-    font-size: 1.5rem;
-    padding: 10px;
-}
-.navLinks ul li a:hover{
     text-decoration: none;
-    padding: 15px;
-    background-color: rgb(233, 223, 223);
-    border-radius: 30px;
-}
-.searchBar{
-    border: none;
-    background-color: rgb(236, 222, 222);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 10px;
-    border-radius: 20px;
-}
-.searchBar input{
-    border: none;
-    background-color: rgb(236, 222, 222);
-}
-.searchBar label{
-    margin: 0;
-}
-.fa-user{
-    font-size: 35px;
-}
-
-.menuHumberger{
-    display: none;
-}
-.fa-user{
-    font-size: 35px;
-}
-.desconnectButton{
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: relative;
-    border-radius: 50px;
-}
-.desconnectButton:hover{
-    background-color: orangered;
-}
-.desconnectList{
-    display: none;
-    background-color: rgba(3, 3, 68, 0.945);
-    padding: 10%;
-}
-.desconnectList ul{
-    margin: 0;
-    padding: 0;
     list-style: none;
 }
-.desconnectList ul li a{
-    display: block;
-    color: white;
+body{
+    overflow: auto;
+}
+header{
     width: 100%;
+    position: sticky;
+    top: 0;
+    transition: all 0.5s ease-in-out;
+    background-image: url("../photo/photoNavBar.jpg");
+    background-size: cover;
+    background-position: center;
 }
-.desconnectList ul li a:hover{
-    background-color:  rgba(227, 227, 240, 0.815);
-} 
+header.hide{
+    transform: translateY(-100%);
+}
+header nav{
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 20vh;
+    border: 1px solid black;
+    flex-direction: wrap;
+    z-index: 10;
+    box-shadow: 0px 3px 20px 2px black;
+    z-index: 999;
+}
+header nav ul{
+    width: 70%;
+    display: flex;
+    justify-content: flex-start;
+}
+header nav ul li{
+    margin: 1%;
+    margin-left: 2%;
+    margin-right: 2%;
+    display: flex;
+    align-items: center;
+}
+header nav ul li a{
+    text-shadow: 2px 2px 3px black;
+    font-size: 200%;
+    display: inline-block;
+    color: #5FF84A2;
+    font-weight: bold;
+}
+header nav ul li a:hover{
+    background-color: transparent;
+    border-bottom: 2px solid burlywood;
+    transform: scale(1.2, 1.2);
+}
+header form{
+    border: 3px solid rgb(8, 8, 185);
+    padding: 0.5%;
+    border-radius: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+header form input{
+    border: 1px solid transparent;
+    padding: 0.5%;
+    border-radius: 50px;
+    background: transparent;
+}
+header form input::placeholder{
+    color: white;
+    font-weight: bolder;
+}
+.btnMenu{
+    display: none;
+    z-index: 999;
+    font-size: 200%;
+    cursor: pointer;
+    transition: transform 0.3s ease-in-out;
+}
+.btnMenu.open{
+    transform: rotate(360deg);
+}
 .showDesconnectList{
-    display: block;
-    position: absolute;
-    top: 100%;
-    box-sizing: border-box;
-    text-align: center;
-    width: 200%;
+    margin: 0;
+    transition: 0.5s ease-in-out;
 }
-
+.fa{
+    color: rgb(8, 8, 185);
+}
 @media (max-width: 900px) {
-    .menuHumberger{
+    header nav{
+        display: flex;
+        justify-content: space-evenly;
+    }
+    .btnMenu{
         display: block;
-        z-index: 999;
     }
-    .menuHumberger .fa-bars:hover{
-        color: white;
+    .fa-bars:hover{
+        color: burlywood;
     }
-    .navLinks{
+    .fa-times:hover{
+        color: burlywood;
+    }
+    header{
+        position: relative;
+    }
+    header nav ul{
+        position: absolute;
         top: 0;
         left: 0;
-        position: absolute;
-        background-color: rgba(56, 17, 230, 0.466);
-        /* flouter l'arrière plan => */
-        backdrop-filter: blur(1px);
-        /* end => */
         width: 100%;
         height: 100vh;
         display: flex;
-        justify-content: space-around;
-        align-items: center;
-        margin-left: -100%;
-        transition: all 0.5s ease;
-        /* display: none; */
-    }
-    .mobileMenu{
-        margin-left: 0;
-    }
-    .navLinks ul{
-        display: flex;
         flex-direction: column;
+        justify-content: center;
         align-items: center;
-        width: 100%;
-        /* display: none; */
+        margin-left: -1000px;
+        backdrop-filter: blur(10px);
     }
-    .navLinks ul li{
-        width: 100%;
-        text-align: center;
+    header nav ul li{
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
-    .navLinks ul li a{
+    header nav ul li a{
         display: block;
-        font-size: 35px;
-        width: 100%;
-        padding: 2%;
+        font-size: 200%;
+        color: rgb(3, 3, 94);
     }
-    .navLinks ul li a:hover{
-        background-color: rgba(56, 17, 230, 0.603);
+    header nav ul li a:hover{
+        color: rgb(116, 65, 0);
+        border-bottom: 1px solid rgb(116, 65, 0);
+        transform: scale(1.5,1.5);
     }
 }
