--- a/css/destination.css
+++ b/css/destination.css
@@ -9,7 +9,8 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    text-decoration: none;
+    list-style: none;
 }
 body{
     font-family: Arial , sans-serif;
@@ -17,6 +18,7 @@ body{
     color: #333;
 }
 .container{
+    padding-top: 1%;
     max-width: 1400px;
     text-align: center;
 }
@@ -47,7 +49,6 @@ h1{
 .destination img{
     width: 100%;
     height: 100%;
-    object-fit: contain;
     object-fit: contain;
     transition: transform 0.3s ease;
 }
