--- a/css/destination.css
+++ b/css/destination.css
@@ -1,24 +1,15 @@
-@font-face {
-    font-family: oswald;
-    src: url('../fonts/Oswald-Regular.ttf');
-}
-@font-face {
-    font-family: Montserrat;
-    src: url('../fonts/Montserrat-Regular.ttf');
-}
 *{
     margin: 0;
     padding: 0;
-    text-decoration: none;
-    list-style: none;
+    box-sizing: border-box;
 }
 body{
     font-family: Arial , sans-serif;
     background-color: #f8f9fa;
     color: #333;
+    align-items: center;
 }
 .container{
-    padding-top: 1%;
     max-width: 1400px;
     text-align: center;
 }
@@ -44,12 +35,11 @@ h1{
 }
 #faire{
     text-align: center;
-    margin-left: 560px;
+    margin: 0 auto;
 }
 .destination img{
     width: 100%;
     height: 100%;
-    object-fit: contain;
     transition: transform 0.3s ease;
 }
 .destination:hover{
@@ -83,11 +73,6 @@ h1{
 .discover-btn:hover{
     background-color: #ffd700;
 }
-
-
-.dest{
-    width: 250px;
-}
 .texte{
     display: flex;
     justify-content: space-around;
@@ -104,7 +89,7 @@ footer{
     color: white;
     padding-top: 20px;
     font-size: 17px;
-    font-family:sans-serif;
+    font-family: sans-serif;
 }
 .fa-mail-bulk{
     color: white;
@@ -114,4 +99,7 @@ footer{
 }
 .fa-youtube{
     color: red;
+}
+.pied p{
+    margin: 0;
 }
